# Orchestrator

./: .council.yml.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/council/: __init__.py  apply.py  artifacts.py  cli.py  compat.py  config.py  context.py  diff_extract.py  pipeline.py  prompts.py  review.py  runner.py  smart_context.py  state.py  types.py
src/council/ui/: __init__.py  api.py  streamlit_app.py
tests/: conftest.py  test_apply.py  test_artifacts.py  test_cli_commands.py  test_compat.py  test_config.py  test_context.py  test_diff_extract.py  test_multi_candidate.py  test_no_save_redact.py  test_pipeline.py  test_resume.py  test_review.py  test_runner.py  test_smart_context.py  test_state.py  test_ui_api.py
